Make changes to the layout of the hero section

--- a/index.html
+++ b/index.html
@@ -12,9 +12,28 @@
     </header>
     <main>
         <section class="hero">
-            <h2>Capture Your Thoughts Instantly</h2>
-            <p>SwiftNote is the fastest way to jot down your ideas, tasks, and notes.</p>
-            <button id="get-started">Get Started</button>
+            <div class="hero-content">
+                <h2>Take Notes Effortlessly.</h2>
+                <h2>Organize Fast.</h2>
+                <h2>Remmember More.</h2>
+                <p>SwiftNote is a lightning Fast web app that helps you jot down, organize and access your ideas in secounds.</p>
+                <button id="get-started">Try SwiftNote Free</button>
+                <button id="watch-demo">Watch Demo</button>
+            </div>
+            <div class="hero-snapshot">
+                <div class="snapshot-menu">
+                    <p>SwiftNote</p>
+                    <ul>
+                        <li>All Notes</li>
+                        <li>Work</li>
+                        <li>Personal</li>
+                    </ul>
+                </div>
+                <div class="snapshot-preview">
+                    <button class="search" aria-placeholder="Search notes..."></button>
+                    
+                </div>
+            </div>
         </section>
 
         <section class="features">
