--- a/index.html
+++ b/index.html
@@ -30,8 +30,35 @@
                     </ul>
                 </div>
                 <div class="snapshot-preview">
-                    <button class="search" aria-placeholder="Search notes..."></button>
-                    
+                    <button class="search" aria-placeholder="Search notes...">Search</button>
+                    <div id="line"></div>
+                    <section class="notes">
+                        <h3>Morning Routine Goals</h3>
+                        <li>Wake up by 6:30 AM</li>
+                        <li>Exercise</li>
+                        <li>Read for 30 minutes</li>
+                    </section>
+                    <div id="line"></div>
+                    <section class="notes">
+                        <h3>Work Tasks</h3>
+                        <li>Finish project report</li>
+                        <li>Team meeting at 10 AM</li>
+                        <li>Lunch with client</li>  
+                    </section>
+                    <div id="line"></div>
+                    <section class="notes">
+                        <h3>Personal Projects</h3>
+                        <li>Start learning JavaScript</li>
+                        <li>Plan weekend trip</li>
+                        <li>Read 'The Great Gatsby'</li>
+                    </section>
+                    <div id="line"></div>
+                    <section class="notes">
+                        <h3>Ideas for Blog Posts</h3>
+                        <li>How to stay productive</li>
+                        <li>Benefits of meditation</li>
+                        <li>Travel tips for 2025</li>
+                    </section>
                 </div>
             </div>
         </section>
@@ -43,27 +70,69 @@
                 <p>SwiftNote allows you to capture your thoughts in seconds.</p>
             </div>
             <div>
-                <h4>Organize with tags</h4>
-                <p>Keep your notes organized and easy to find.</p>
+                <h4>📝 Quick Note-Taking</h4>
+                <p>Jot down ideas in seconds with our fast, clean interface.</p>
             </div>
             <div>
-                <h4>Sync across devices</h4>
-                <p>Your notes are always with you, no matter the device.</p>
+                <h4>📁 Organize Effortlessly</h4>
+                <p>Create folders, tags, and color-coded notes to stay organized.</p>
             </div>
             <div>
-                <h4>Share notes with friends</h4>
-                <p>Collaborate and share your notes effortlessly.</p>
+                <h4>🔄 Sync Across Devices</h4>
+                <p>Access your notes from your phone, tablet, or desktop. Everything updates instantly.</p>
+            </div>
+            <div>
+                <h4>🔐 Secure and Private</h4>
+                <p>Your notes are encrypted and safe—only you can access them.</p>
+            </div>
+            <div>
+                <h4>📷 Add Images & Checklists</h4>
+                <p>Attach photos, to-dos, and voice memos to make your notes richer and more useful.</p>
             </div>
         </section>
 
+        <section class="how-it-works">
+            <h3>How It Works</h3>
+            <div>
+                <h4>1. Sign Up</h4>
+                <p>Create a free account to get started with SwiftNote.</p>
+            </div>
+            <div>
+                <h4>2. Create Notes</h4>
+                <p>Use our intuitive interface to jot down your thoughts and ideas.</p>
+            </div>
+            <div>
+                <h4>3. Organize & Access</h4>
+                <p>Sort your notes into folders and access them from any device.</p>
+            </div>
+        </section>
+
+        <section>
+            <h3>What Our Users Are Saying</h3>
+            <blockquote>
+                <img src="images/user-alex.jpg" alt="Alex P. profile photo" width="48" height="48" style="border-radius:50%;vertical-align:middle;margin-right:12px;">
+                <p>"SwiftNote has transformed the way I take notes. It's fast, efficient, and incredibly user-friendly!"</p>
+                <footer>- Alex P.</footer>
+            </blockquote>
+            <blockquote>
+                <img src="images/user-jamie.jpg" alt="Jamie L. profile photo" width="48" height="48" style="border-radius:50%;vertical-align:middle;margin-right:12px;">
+                <p>"I love the organization features. I can easily find what I need, when I need it."</p>
+                <footer>- Jamie L.</footer>
+            </blockquote>
+            <blockquote>
+                <img src="images/user-taylor.jpg" alt="Taylor R. profile photo" width="48" height="48" style="border-radius:50%;vertical-align:middle;margin-right:12px;">
+                <p>"The ability to sync across devices is a game-changer. I can access my notes anywhere!"</p>
+                <footer>- Taylor R.</footer>
+            </blockquote> 
+        </section>
         <section class="cta">
-            <h3>Join the SwiftNote Community!</h3>
-            <button id="join-now">Join Now</button>
+            <h3>Boost Your Productivity with SwiftNote!</h3>
+            <button id="get-started">Try SwiftNote Free</button>
         </section>
 
 </body>
 <footer>
-    <p>&copy; 2025 SwiftNote Landing Page</p>
+    <p>&copy; 2025 SwiftNote</p>
 </footer>
 <script src="index.js"></script>
 </html>
