I have done additional changes to file.

--- a/index.html
+++ b/index.html
@@ -110,19 +110,19 @@
         <section>
             <h3>What Our Users Are Saying</h3>
             <blockquote>
-                <img src="images/user-alex.jpg" alt="Alex P. profile photo" width="48" height="48" style="border-radius:50%;vertical-align:middle;margin-right:12px;">
+                <img src="alexP.jpeg" alt="Alex P. profile photo" width="48" height="48" ">
                 <p>"SwiftNote has transformed the way I take notes. It's fast, efficient, and incredibly user-friendly!"</p>
                 <footer>- Alex P.</footer>
             </blockquote>
             <blockquote>
-                <img src="images/user-jamie.jpg" alt="Jamie L. profile photo" width="48" height="48" style="border-radius:50%;vertical-align:middle;margin-right:12px;">
+                <img src="marvaR.png" alt="Jamie L. profile photo" width="48" height="48" ">
                 <p>"I love the organization features. I can easily find what I need, when I need it."</p>
-                <footer>- Jamie L.</footer>
+                <footer>- Marva R.</footer>
             </blockquote>
             <blockquote>
-                <img src="images/user-taylor.jpg" alt="Taylor R. profile photo" width="48" height="48" style="border-radius:50%;vertical-align:middle;margin-right:12px;">
+                <img src="jamesD.png" alt="Taylor R. profile photo" width="48" height="48">
                 <p>"The ability to sync across devices is a game-changer. I can access my notes anywhere!"</p>
-                <footer>- Taylor R.</footer>
+                <footer>- James D.</footer>
             </blockquote> 
         </section>
         <section class="cta">
