Added css to begin styling the page

--- a/index.html
+++ b/index.html
@@ -129,10 +129,15 @@
             <h3>Boost Your Productivity with SwiftNote!</h3>
             <button id="get-started">Try SwiftNote Free</button>
         </section>
-
+    </main>
 </body>
-<footer>
-    <p>&copy; 2025 SwiftNote</p>
-</footer>
+    <footer>
+        <p>&copy; 2025 SwiftNote. All rights reserved.</p>
+        <ul>
+            <li><a href="#">Privacy Policy</a></li>
+            <li><a href="#">Terms of Service</a></li>
+            <li><a href="#">Contact Us</a></li>
+        </ul>       
+    </footer>
 <script src="index.js"></script>
 </html>
