--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <h1>SwiftNote</h1>
     </header>
     <main>
-        <section class="hero">
+        <section class="hero section">
             <div class="hero-content">
                 <h2>Take Notes Effortlessly.</h2>
                 <h2>Organize Fast.</h2>
@@ -63,75 +63,88 @@
             </div>
         </section>
 
-        <section class="features">
-            <h3>Features</h3>
+        <section class="features section">
             <div>
-                <h4>Quick note-taking</h4>
-                <p>SwiftNote allows you to capture your thoughts in seconds.</p>
+                <h2>Features</h2>
             </div>
-            <div>
-                <h4>📝 Quick Note-Taking</h4>
-                <p>Jot down ideas in seconds with our fast, clean interface.</p>
+            <div class="feature-list-container">
+                <div class="feature-list">
+                    <h4>Quick note-taking</h4>
+                    <p>SwiftNote allows you to capture your thoughts in seconds.</p>
+                </div>
+                <div class="feature-list">
+                    <h4>📝 Quick Note-Taking</h4>
+                    <p>Jot down ideas in seconds with our fast, clean interface.</p>
+                </div>
+                <div class="feature-list">
+                    <h4>📁 Organize Effortlessly</h4>
+                    <p>Create folders, tags, and color-coded notes to stay organized.</p>
+                </div>
+                <div class="feature-list">
+                    <h4>🔄 Sync Across Devices</h4>
+                    <p>Access your notes from your phone, tablet, or desktop. Everything updates instantly.</p>
+                </div>
+                <div class="feature-list">
+                    <h4>🔐 Secure and Private</h4>
+                    <p>Your notes are encrypted and safe—only you can access them.</p>
+                </div>
+                <div class="feature-list">
+                    <h4>📷 Add Images & Checklists</h4>
+                    <p>Attach photos, to-dos, and voice memos to make your notes richer and more useful.</p>
+                </div>
             </div>
-            <div>
-                <h4>📁 Organize Effortlessly</h4>
-                <p>Create folders, tags, and color-coded notes to stay organized.</p>
+            
+        </section>
+
+        <section class="how-it-works section">
+            <div class="how-it-works-header">
+                <h2>How It Works</h2>
             </div>
-            <div>
-                <h4>🔄 Sync Across Devices</h4>
-                <p>Access your notes from your phone, tablet, or desktop. Everything updates instantly.</p>
-            </div>
-            <div>
-                <h4>🔐 Secure and Private</h4>
-                <p>Your notes are encrypted and safe—only you can access them.</p>
-            </div>
-            <div>
-                <h4>📷 Add Images & Checklists</h4>
-                <p>Attach photos, to-dos, and voice memos to make your notes richer and more useful.</p>
+            <div class="how-it-works-steps">
+                <div>
+                    <h3>1. Sign Up</h3>
+                    <p>Create a free account to get started with SwiftNote.</p>
+                </div>
+                <div>
+                    <h3>2. Create Notes</h3>
+                    <p>Use our intuitive interface to jot down your thoughts and ideas.</p>
+                </div>
+                <div>
+                    <h3>3. Organize & Access</h3>
+                    <p>Sort your notes into folders and access them from any device.</p>
+                </div>
             </div>
         </section>
 
-        <section class="how-it-works">
-            <h3>How It Works</h3>
-            <div>
-                <h4>1. Sign Up</h4>
-                <p>Create a free account to get started with SwiftNote.</p>
+        <section class="testimonials section">
+            <div class="testimonials-header">
+                <h2>What Our Users Are Saying</h2>
             </div>
-            <div>
-                <h4>2. Create Notes</h4>
-                <p>Use our intuitive interface to jot down your thoughts and ideas.</p>
-            </div>
-            <div>
-                <h4>3. Organize & Access</h4>
-                <p>Sort your notes into folders and access them from any device.</p>
+            <div class="testimonials-list"> 
+                <blockquote>
+                    <img src="alexP.jpeg" alt="Alex P. profile photo" width="48" height="48" ">
+                    <p>"SwiftNote has transformed the way I take notes. It's fast, efficient, and incredibly user-friendly!"</p>
+                    <footer>- Alex P.</footer>
+                </blockquote>
+                <blockquote>
+                    <img src="marvaR.png" alt="Jamie L. profile photo" width="48" height="48" ">
+                    <p>"I love the organization features. I can easily find what I need, when I need it."</p>
+                    <footer>- Marva R.</footer>
+                </blockquote>
+                <blockquote>
+                    <img src="jamesD.png" alt="Taylor R. profile photo" width="48" height="48">
+                    <p>"The ability to sync across devices is a game-changer. I can access my notes anywhere!"</p>
+                    <footer>- James D.</footer>
+                </blockquote> 
             </div>
         </section>
-
-        <section>
-            <h3>What Our Users Are Saying</h3>
-            <blockquote>
-                <img src="alexP.jpeg" alt="Alex P. profile photo" width="48" height="48" ">
-                <p>"SwiftNote has transformed the way I take notes. It's fast, efficient, and incredibly user-friendly!"</p>
-                <footer>- Alex P.</footer>
-            </blockquote>
-            <blockquote>
-                <img src="marvaR.png" alt="Jamie L. profile photo" width="48" height="48" ">
-                <p>"I love the organization features. I can easily find what I need, when I need it."</p>
-                <footer>- Marva R.</footer>
-            </blockquote>
-            <blockquote>
-                <img src="jamesD.png" alt="Taylor R. profile photo" width="48" height="48">
-                <p>"The ability to sync across devices is a game-changer. I can access my notes anywhere!"</p>
-                <footer>- James D.</footer>
-            </blockquote> 
-        </section>
-        <section class="cta">
+        <section class="cta section">
             <h3>Boost Your Productivity with SwiftNote!</h3>
             <button id="get-started">Try SwiftNote Free</button>
         </section>
     </main>
 </body>
-    <footer>
+    <footer class="footer section">
         <p>&copy; 2025 SwiftNote. All rights reserved.</p>
         <ul>
             <li><a href="#">Privacy Policy</a></li>
