More edits and attempt to have a clean icon

--- a/index.html
+++ b/index.html
@@ -5,9 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SwiftNote Landing Page</title>
     <link rel="stylesheet" href="index.css">
+    <link rel="icon" href="favicon-icon.png" type="image/png">
 </head>
 <body>
     <header>
+        <img src="favicon-icon-transparent.png" alt="logo" class="logo" width="70rem" height="70rem">
         <h1>SwiftNote</h1>
     </header>
     <main>
