Made additional chnages to the style of the page. Next i will focus on responsiveness.

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="icon" href="favicon-icon.png" type="image/png">
 </head>
 <body>
-    <header>
+    <header class="header">
         <img src="favicon-icon-transparent.png" alt="logo" class="logo" width="70rem" height="70rem">
         <h1>SwiftNote</h1>
     </header>
@@ -24,7 +24,7 @@
             </div>
             <div class="hero-snapshot">
                 <div class="snapshot-menu">
-                    <p>SwiftNote</p>
+                    <h2>SwiftNote</h2>
                     <ul>
                         <li>All Notes</li>
                         <li>Work</li>
