Complete lading page

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                     </ul>
                 </div>
                 <div class="snapshot-preview">
-                    <button class="search" aria-placeholder="Search notes...">Search</button>
+                    <button class="search" aria-placeholder="Search notes..." onclick="searchNotes()">Search</button>
                     <div id="line"></div>
                     <section class="notes">
                         <h3>Morning Routine Goals</h3>
